--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +9,65 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+body, html, ul, li {
+  margin:0;
+  padding: 0;
+  font-family: Arial;
+}
+nav {
+  position: fixed;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.5);
+  text-align: center;
+  width: 100%;
+  background-color: white;
+  z-index: 1;
+}
+li {
+  display: inline-block;
+  width: 25%;
+}
+a {
+  display: inline-block;
+  width: 100%;
+  padding: 20px 0;
+  color: black;
+  text-decoration: none;
+  color: #555ccc;
+  transition: color 0.3s, background-color 0.3s;
+  transition: all 0.3s;
+  border-bottom: 5px solid transparent;
+}
+a.selected {
+  background-color: #d4e3ef;
+  color: #000980;
+  border-bottom: 5px solid #4bb6f5;
+}
+main {
+  padding-top:58px;
+}
+section {
+  height: 150vh;
+  background: linear-gradient(230deg,#a24bcf,#4b79cf,#4bc5cf);
+  padding: 100px;
+  font-size: 52px;
+  color: white;
+  text-align: center;
+  transition: all 0.3s;
+  border-color: black;
+  background-size: 200%
+}
+section.selected {
+  border-left: 10vw solid black;
+  border-right: 10vw solid black;
+  animation: BgAnimation 3s ease infinite;
+  color: black;
+  font-size: 100px;
+  text-shadow: 0 0 10px rgba(255,255,255,0.5);
+}
+@keyframes BgAnimation {
+  0%{background-position:50% 50%}
+  50%{background-position:100% 100%}
+  100%{background-position:50% 50%}
 }
