--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+      monospace;
 }
 
 body, html, ul, li {
@@ -17,43 +17,49 @@ body, html, ul, li {
   font-family: Arial;
 }
 nav {
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0.5rem 0rem;
+  color: black;
+  -webkit-box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
+  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
   position: fixed;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.5);
   text-align: center;
   width: 100%;
-  background-color: white;
+  background-color: #000;
   z-index: 1;
+  padding-left: 10px;
 }
 li {
   display: inline-block;
-  width: 25%;
+  padding: 0 15px;
 }
-a {
-  display: inline-block;
-  width: 100%;
-  padding: 20px 0;
-  color: black;
-  text-decoration: none;
-  color: #555ccc;
-  transition: color 0.3s, background-color 0.3s;
-  transition: all 0.3s;
-  border-bottom: 5px solid transparent;
-}
-a.selected {
-  background-color: #d4e3ef;
-  color: #000980;
-  border-bottom: 5px solid #4bb6f5;
-}
+
 main {
   padding-top:58px;
 }
 section {
   height: 150vh;
+  background: -o-linear-gradient(220deg,#a24bcf,#4b79cf,#4bc5cf);
   background: linear-gradient(230deg,#a24bcf,#4b79cf,#4bc5cf);
   padding: 100px;
   font-size: 52px;
   color: white;
   text-align: center;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
   transition: all 0.3s;
   border-color: black;
   background-size: 200%
@@ -61,10 +67,16 @@ section {
 section.selected {
   border-left: 10vw solid black;
   border-right: 10vw solid black;
+  -webkit-animation: BgAnimation 3s ease infinite;
   animation: BgAnimation 3s ease infinite;
   color: black;
   font-size: 100px;
   text-shadow: 0 0 10px rgba(255,255,255,0.5);
+}
+@-webkit-keyframes BgAnimation {
+  0%{background-position:50% 50%}
+  50%{background-position:100% 100%}
+  100%{background-position:50% 50%}
 }
 @keyframes BgAnimation {
   0%{background-position:50% 50%}
