--- a/src/containers/Header.css
+++ b/src/containers/Header.css
@@ -14,6 +14,11 @@
     margin: 0 2rem 0 1rem;
 }
 
+.logo {
+    width: 300px;
+    height: 60px;
+}
+
 .navigation-menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -78,22 +83,31 @@
     -o-transition: background-color 0.2s ease-in-out;
     transition: background-color 0.2s ease-in-out;
     position: absolute;
-    top: 50%;
+    top: 43px;
     right: 15px;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     color:#fff;
+    margin-right: 10px;
 }
 
 .language {
     padding-left: 10px;
+    cursor: pointer;
 }
+
+.language img {
+    width: 25px;
+    height: 25px;
+    pointer-events: none;
+}
+
 
 @media screen and (max-width: 1100px) {
 .navigation-menu {
         font-size: 0.75rem;
-        top: 0;
+        top: 25px;
     }
 
 .navigation-menu li {
@@ -112,12 +126,9 @@
     }
 
 .languages {
-        top: 25px;
+        top: 50px;
     }
 
-.hamburger {
-        top: 25px;
-    }
 
     nav {
         height: auto;
@@ -127,6 +138,7 @@
 @media screen and (max-width: 900px) {
 .hamburger {
         display: block;
+        top: 37px;
     }
 
 .navigation-menu {
@@ -165,5 +177,27 @@ border-top: 1px solid black;
 
 .languages {
     right: 75px;
+    top: 40px;
 }
+}
+
+@media screen and (max-width: 535px) {
+    .logo {
+        width: 150px;
+        height: 30px;
+    }
+
+    .language img {
+            width: 20px;
+            height: 20px;
+        }
+
+    .languages {
+        top: 25px;
+    }
+
+.hamburger {
+        top: 25px;
+    }
+
 }
