--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -45,9 +46,21 @@ nav {
 li {
   display: inline-block;
   padding: 0 15px;
+  font-family: 'CATArena';
+  text-transform: uppercase;
+}
+
+h5 {
+  font-family: 'CATArena';
+  font-weight: normal;
+  text-transform: uppercase;
+  display: block;
+  margin: 0;
+  text-align: left;
 }
 
 h2 {
+  font-family: 'Rubik Dirt';
   font-size: 2rem;
 }
 
